--- a/coderun.ipynb
+++ b/coderun.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMyAZgEMlnBoeCE7txba8Rt",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/dorisagusioboechianu-blip/CSC500-1_Module-1-Critical-Thinking-Assignment/blob/main/Untitled18.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,20 +12,20 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "tWp2QSAA1COs"
+      },
       "source": [
         "Part 1:\n",
         "Write a Python program to find the addition and subtraction of two numbers.\n",
         "\n",
         "Ask the user to input two numbers (num1 and num2). Given those two numbers, add them together to find the output. Also, subtract the two numbers to find the output.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "tWp2QSAA1COs"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -49,18 +33,7 @@
         "id": "SSBEGS_Q0vYd",
         "outputId": "6d0c5a27-ba2e-408f-94bf-76dbd5eaf126"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter the first number: 5\n",
-            "Enter the second number: 10\n",
-            "The sum of 5.0 and 10.0 is: 15.0\n",
-            "The difference between 5.0 and 10.0 is: -5.0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# calc.py - interactive\n",
         "num1 = float(input(\"Enter the first number: \"))\n",
@@ -75,17 +48,37 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "HUTcM8-a2LHJ"
+      },
       "source": [
         "Part 2: Write a Python program to find the multiplication and division of two numbers.\n",
         "\n",
         "Ask the user to input two numbers (num1 and num2). Given those two numbers, multiply them together to find the output. Also, divide num1/num2 to find the output."
-      ],
-      "metadata": {
-        "id": "HUTcM8-a2LHJ"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nZfZRdUY2YEp",
+        "outputId": "8fafbb41-2a84-45d1-b851-ef8f1ff4cf40"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter the first number: 68\n",
+            "Enter the second number: 0.89\n",
+            "The product of 68.0 and 0.89 is: 60.52\n",
+            "The division of 68.0 by 0.89 is: 76.40449438202248\n"
+          ]
+        }
+      ],
       "source": [
         "# Program to find multiplication and division of two numbers\n",
         "\n",
@@ -105,27 +98,32 @@
         "# Display the results\n",
         "print(\"The product of\", num1, \"and\", num2, \"is:\", mul_result)\n",
         "print(\"The division of\", num1, \"by\", num2, \"is:\", div_result)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "nZfZRdUY2YEp",
-        "outputId": "8fafbb41-2a84-45d1-b851-ef8f1ff4cf40"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter the first number: 68\n",
-            "Enter the second number: 0.89\n",
-            "The product of 68.0 and 0.89 is: 60.52\n",
-            "The division of 68.0 by 0.89 is: 76.40449438202248\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMyAZgEMlnBoeCE7txba8Rt",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.1"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
